# wd14-tagger-standalone

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py
tagger/: cli.py  dbimutils.py  deepbooru.py  deepbooru_model.py  image.py  interrogator.py  interrogators.py  modelloader.py
tagger/interrogator/: __init__.py  camietaggerinterrogator.py  interrogator.py  mldanbooruinterrogator.py  waifudiffusioninterrogator.py
